--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
     "sequelize": "^6.23.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "supertest": "^6.3.4"
   },
   "devDependencies": {
     "@testing-library/react": "^12.0.0",
     "babel-jest": "^27.1.0",
-    "jest": "^27.1.0",
+    "jest": "^27.5.1",
     "process": "^0.11.10"
   }
 }
